# scratch

./: .gitignore  constituency_lookup.json  gemini-code-1782388559744.md  pyproject.toml  requirements.txt
scratch/: generate_missing_social.py
src/: affidavits_scraper.py  caste_survey_ingester.py  census_ingester.py  config.py  eci_harvester.py  economic_ingester.py  electoral_roll_ingester.py  flood_ingester.py  infrastructure_ingester.py  latest1_ingester.py  latest2_ingester.py  latest3_ingester.py  latest_ingester.py  logger.py  main.py  news_aggregator.py  nfhs_ingester.py  scheme_tracker.py  social_media_scraper.py  spatial_downloader.py
