[project]
name = "anti-gravity-harvester"
version = "0.1.0"
description = "Anti-Gravity Automated Ingestion Pipeline (ConstituencyIQ Phase 1)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "openpyxl",
    "pdfplumber",
    "beautifulsoup4",
    "httpx",
    "loguru",
    "playwright"
]
